welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:30: error: Unit does not take parameters
	faireBigMotif()(c: Color.YELLOW)
                       ^